internal/xds/translator/testdata/out/xds-ir/retry-partial-invalid.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: first-route
      route:
        cluster: first-route-dest
        retryPolicy:
          numRetries: 5
          perTryTimeout: 0.250s
          retriableStatusCodes:
          - 429
          - 503
          retryBackOff:
            baseInterval: 0.100s
            maxInterval: 10s
          retryOn: connect-failure,retriable-status-codes
  - domains:
    - foo
    name: first-listener/foo
    routes:
    - match:
        prefix: /
      name: second-route-defaults
      route:
        cluster: first-route-dest
        retryPolicy:
          numRetries: 2
          retriableStatusCodes:
          - 503
          retryOn: connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
  - domains:
    - bar
    name: first-listener/bar
